--- a/CodeExamples/AnotherStorageImplementation/AnotherStorageImplementation.csproj
+++ b/CodeExamples/AnotherStorageImplementation/AnotherStorageImplementation.csproj
@@ -1,40 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <TargetFramework>net7.0</TargetFramework>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{EE8E3C58-371E-4164-93DA-13D055D5BDDE}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BaCSharp</RootNamespace>
-    <AssemblyName>AnotherStorageImplementation</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
-    <FileAlignment>512</FileAlignment>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
@@ -48,9 +18,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Yabe\Resources\EmbeddedDll\SharpPcap.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\..\Yabe\BACnetBase.cs">
@@ -68,43 +35,11 @@
     <Compile Include="..\..\Yabe\BACnetTransportEthernet.cs">
       <Link>BACnetTransport.cs</Link>
     </Compile>
-    <Compile Include="BacnetActivity.cs" />
-    <Compile Include="BacnetObjects\AnalogInput.cs" />
-    <Compile Include="BacnetObjects\AnalogObject.cs" />
-    <Compile Include="BacnetObjects\AnalogObjectEvent.cs" />
-    <Compile Include="BacnetObjects\AnalogOutput.cs" />
-    <Compile Include="BacnetObjects\BacnetDateTime.cs" />
-    <Compile Include="BacnetObjects\BacnetFile.cs" />
-    <Compile Include="BacnetObjects\BaCSharpObject.cs" />
-    <Compile Include="BacnetObjects\BaCSharpType.cs" />
-    <Compile Include="BacnetObjects\BinaryInput.cs" />
-    <Compile Include="BacnetObjects\BinaryObject.cs" />
-    <Compile Include="BacnetObjects\BinaryOutput.cs" />
-    <Compile Include="BacnetObjects\Calendar.cs" />
-    <Compile Include="BacnetObjects\CharacterString.cs" />
-    <Compile Include="BacnetObjects\DeviceObject.cs" />
-    <Compile Include="BacnetObjects\MultiStateInput.cs" />
-    <Compile Include="BacnetObjects\MultiStateOutput.cs" />
-    <Compile Include="BacnetObjects\NotificationClass.cs" />
-    <Compile Include="BacnetObjects\Schedule.cs" />
-    <Compile Include="BacnetObjects\StructuredView.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="BacnetObjects\TrendLog.cs" />
-    <Compile Include="BacnetObjects\TrendLogCustom.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Subscription.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.4.421302">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
